<?xml version="1.0" encoding="UTF-8"?><!--<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">-->
<!--    <data>-->
<!--        <variable name="recuperarSenhaVM" type="com.lulu.mapper.modules.recuperar_senha.data.viewmodel.RecuperarSenhaVM"/>-->
<!--    </data>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearRecuperarsenha"
    style="@style/groupStyleindigo_500"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="@dimen/_223pxh"
        android:layout_height="@dimen/_74pxh"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_102pxh"
        android:layout_marginTop="@dimen/_89pxv"
        android:layout_marginEnd="@dimen/_102pxh"
        android:scaleType="fitXY"
        android:src="@drawable/img_logo"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img_logo" />

    <LinearLayout
        android:id="@+id/linearFormulariologi"
        style="@style/groupStylewhite_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_261pxv"
        android:gravity="start"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageArrowleft"
                android:layout_width="14dp"
                android:layout_height="12dp"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_arrowleft"
                android:clickable="true"/>

            <TextView
                android:id="@+id/txtRecuperarsenha"
                style="@style/txtRubikmedium24_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_23pxh"
                android:layout_weight="0.92"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_recuperar_senha"
                tools:text="@string/lbl_recuperar_senha" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtInformeseuema"
            style="@style/txtRubikregular16_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/msg_informe_seu_ema"
            tools:text="@string/msg_informe_seu_ema" />

        <LinearLayout
            android:id="@+id/linearEmail"
            style="@style/groupStylecornerRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtEmail"
                style="@style/txtInterregular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_email"
                tools:ignore="TextSizeCheck"
                tools:text="@string/lbl_e_mail2" />

            <EditText
                android:id="@+id/etInput"
                style="@style/etSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_9pxv"
                android:background="@drawable/rectangle_bg_white_a700_border_deep_purple_50_radius_20"
                android:drawableStart="@drawable/img_arrowdown"
                android:drawablePadding="@dimen/_19pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_seu_e_mail"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_19pxh"
                android:paddingTop="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@={recuperarSenhaVM.recuperarSenhaModel.etInputValue}"
                android:textColorHint="@color/bluegray_400"
                tools:ignore="Autofill" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRecuperarAcessoOne"
            style="@style/btnSolidRounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:singleLine="true"
            android:text="@string/msg_recuperar_acess"
            android:textAllCaps="false"
            tools:text="@string/msg_recuperar_acess" />
    </LinearLayout>
</LinearLayout>
